--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./css/input-text.css" />
         <link rel="stylesheet" href="./css/button.css" />
+        <link rel="stylesheet" href="./css/aviso.css" /
 
         <!-- LOAD JS -->
         <script src="./imc.js" defer></script>
@@ -30,7 +31,7 @@
                     </div>
                 </form>
                 <button id="calcular" class="button template">Calcular</button>
-                <div class="result" id="resultado"></div>
+                <div class="result" id="resultado"><span class="invisible">teste</span></div>
             </div>
         </main>
     </body>
