--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
                     </div>
                     <div class="input">
                         <label>Altura:</label>
-                        <input type="number" id="altura" required step="any" min="0.4" max="3"/>
+                        <!-- <input type="number" id="altura" required step="any" min="0.4" max="3"/> -->
+                        <input type="range" class="slider" id="altura" step="0.01" min="0.5" max="2.5" value="1.7" required>
                     </div>
                     <div class="input">
                         <label>Peso:</label>
-                        <input type="number" id="peso" required min="1" />
+                        <input type="range" class="slider" id="altura" min="0.5" max="2.5" value="1.7" required>
                     </div>
                 </form>
                 <button id="calcular" class="button template">Calcular</button>
