--- a/index.html
+++ b/index.html
@@ -4,30 +4,40 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>IMC</title>
+
+        <!-- LOAD CSS -->
         <link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./css/input-text.css" />
+        <link rel="stylesheet" href="./css/input-range.css" />
         <link rel="stylesheet" href="./css/button.css" />
 
         <!-- LOAD JS -->
-        <script src="./imc.js" defer></script>
+        <script src="./js/imc.js" defer type="module"></script>
     </head>
     <body>
         <main>
             <div class="container">
                 <div class="title">Calculadora - IMC</div>
                 <form id="formulario">
-                    <div class="input">
+                    <div class="input_text">
                         <label>Nome:</label>
                         <input type="text" id="nome" autocomplete="off" required/>
                     </div>
-                    <div class="input">
+                    <div class="input_range">
                         <label>Altura:</label>
-                        <!-- <input type="number" id="altura" required step="any" min="0.4" max="3"/> -->
-                        <input type="range" class="slider" id="altura" step="0.01" min="0.5" max="2.5" value="1.7" required>
+                        <span class="range_value" id="valor_altura">1.70m</span>
+                        <input type="range" class="slider" id="altura" 
+                            step="0.01" min="0.5" max="2.5" value="1.7" 
+                            required />
                     </div>
-                    <div class="input">
+                    <div class="input_range">
                         <label>Peso:</label>
-                        <input type="range" class="slider" id="altura" min="0.5" max="2.5" value="1.7" required>
+                        <span class="range_value" id="valor_peso">70kg</span>
+
+                        <input 
+                            type="range" class="slider" id="peso" 
+                            step="1" min="2" max="250" value="70"  
+                            required />
                     </div>
                 </form>
                 <button id="calcular" class="button template">Calcular</button>
@@ -39,3 +49,6 @@
         </main>
     </body>
 </html>
+
+<!--  onchange="trocarValorSlider(this.value, 'altura')" 
+                            oninput="trocarValorSlider(this.value, 'altura')"  -->
