mudando estilo do slider

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <span class="range_value" id="valor_altura">1.70m</span>
                         <input type="range" class="slider" id="altura" 
                             step="0.01" min="0.5" max="2.5" value="1.7" 
-                            required />
+                            data-unidade="m" required />
                     </div>
                     <div class="input_range">
                         <label>Peso:</label>
@@ -37,7 +37,7 @@
                         <input 
                             type="range" class="slider" id="peso" 
                             step="1" min="2" max="250" value="70"  
-                            required />
+                            data-unidade="kg" required />
                     </div>
                 </form>
                 <button id="calcular" class="button template">Calcular</button>
